bug: PageVersion API not returning any data
